--- a/package.json
+++ b/package.json
@@ -26,6 +26,9 @@
     "prettier": "3.2.5"
   },
   "dependencies": {
-    "express": "^4.19.2"
+    "cors": "^2.8.5",
+    "express": "^4.19.2",
+    "mongodb": "^6.7.0",
+    "mongoose": "^8.4.1"
   }
 }
