--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "webpack.config.js",
   "scripts": {
+    "start": "node ./controllers/app",
     "server": "nodemon ./controllers/app",
     "eslint": "eslint --init"
   },
